--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ License: What license is it under?
 Imports: 
     config (>= 0.3.2),
     golem (>= 0.4.1),
-    shiny (>= 1.8.0)
+    shiny (>= 1.8.0),
+    shinydashboard
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
