--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,12 @@ Description: App used to explore sp/su Chinook Salmon smolt length distributions
 License: What license is it under?
 Imports: 
     config (>= 0.3.2),
+    ggplot2,
     golem (>= 0.4.1),
+    patchwork,
     shiny (>= 1.8.0),
-    shinydashboard
+    shinydashboard,
+    shinyWidgets
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
