--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ Imports:
     ggh4x,
     ggplot2,
     golem (>= 0.4.1),
+    magrittr,
     patchwork,
     shiny (>= 1.8.0),
     shinydashboard,
-    shinyWidgets
+    shinyWidgets,
+    tidyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
