--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ License: What license is it under?
 Imports: 
     config (>= 0.3.2),
     dplyr,
+    fresh,
     ggh4x,
     ggplot2,
     golem (>= 0.4.1),
