--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+URL: https://github.com/caitobrien/HydroSurvSizePred.git
+BugReports: https://github.com/caitobrien/HydroSurvSizePred.git/issues
