--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,26 +5,27 @@ Authors@R: person('CAITLIN', 'OBRIEN', email = 'CSOBRIEN@UW.EDU', role = c('cre'
 Description: App used to explore sp/su Chinook Salmon smolt length distributions, predator risk from Northern Pikeminnow and Pacific Hake, and survival across years and seasons.
 License: What license is it under?
 Imports: 
-    attempt,
     config (>= 0.3.2),
     dplyr,
-    DT,
     fresh,
     ggh4x,
     ggplot2,
-    glue,
     golem (>= 0.4.1),
-    htmltools,
     leaflet,
     magrittr,
     patchwork,
     plotly,
+    rlang,
+    scales,
     shiny (>= 1.8.0),
     shinydashboard,
     shinyWidgets,
+    testthat,
     tidyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
 URL: https://github.com/caitobrien/HydroSurvSizePred.git
 BugReports: https://github.com/caitobrien/HydroSurvSizePred.git/issues
+Depends: 
+    R (>= 2.10)
