add data-raw and git ignore files(remove as needed)

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^data-raw$
+data-raw/survival/
+data-raw/size_distribution/
+data-raw/predation_risk/
 dev_history.R
 ^dev$
 $run_dev.*
